2010-02-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/hlsring.py:
	Get the media sequence from the last fragment in the playlist
	and save the sequence number rather than the segment name.

2010-02-04  Marc-André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales Alastruey

	* flumotion/component/consumers/applestreamer/resources.py:
	Set "Keep-Alive" for playlist, it can increase by 2 the number of
	request processed. However, it needs a good reactor that can
	handle idle connections.

2010-02-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_mpegts.py:
	Fix test with the new muxer inserting IN_CAPS buffers

2010-02-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Remove unused warning. Checking for the mpegtsmuxer's version
	already grants having the streamheaders

2010-02-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Fix deprecation warning

2010-02-04   Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Use 'streamheaders' to get PAT and PMT and write them only once at the
	beginning of each fragment
	* flumotion/component/muxers/mpegts/mpegts.py:
	Use the new 'pat/pmt-interval' property in mepgtsmux set the
	insertion interval to the maximum allowed

2010-02-03  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/setup.py.in:
	Fix pep8

2010-02-03  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavi Martinez

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	* flumotion/component/consumers/applestreamer/resources.py:
	Improve component logs

2010-01-29  Andoni Morales Alastruey  <amorales@flumotion.com>
